[package]
name = "autd3-license-check"
version = "30.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
cargo-license = "0.6.1"
cargo_metadata = "0.18.1"
console = "0.15.7"
glob = "0.3.1"
reqwest = { version = "0.12.8", features = ["blocking"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.104"
similar = { version = "2.2.1", features = ["text", "inline", "bytes"] }
toml = "0.8.2"
